fix: Wrap alert actions more eagerly

--- a/src/alert/styles.scss
+++ b/src/alert/styles.scss
@@ -23,8 +23,8 @@
 .alert {
   @include styles.styles-reset;
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: row;
   border-block: awsui.$border-width-alert solid;
   border-inline: awsui.$border-width-alert solid;
   border-start-start-radius: awsui.$border-radius-alert;
@@ -34,21 +34,13 @@
   padding-block: awsui.$space-alert-vertical;
   padding-inline: awsui.$space-alert-horizontal;
   background-color: awsui.$color-background-container-content;
+}
 
-  &.with-dismiss,
-  &.with-action {
-    grid-template-columns: 1fr auto;
-  }
-  &.with-action.with-dismiss {
-    grid-template-columns: 1fr auto auto;
-  }
-  // Below the breakpoint, arrange actions below the content
-  &.breakpoint-default.with-action {
-    grid-template-columns: 1fr auto;
-  }
-  &.breakpoint-default:not(.with-dismiss) {
-    grid-template-columns: 1fr;
-  }
+.alert-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .hidden {
@@ -67,7 +59,8 @@
 
 .action {
   white-space: nowrap;
-  margin-inline-start: awsui.$space-alert-action-left;
+  padding-inline-start: awsui.$space-alert-action-left;
+  margin-inline-start: auto;
 }
 
 .action-slot,
@@ -76,6 +69,7 @@
 }
 
 .alert-focus-wrapper {
+  flex-grow: 1;
   display: grid;
   grid-template-columns: min-content auto;
 
@@ -99,25 +93,6 @@
   }
   &.message {
     margin-inline-end: awsui.$space-alert-message-right;
-  }
-}
-
-.breakpoint-default {
-  // Below the breakpoint, arrange actions below the content
-  > .action {
-    grid-row: 2;
-    margin-block-end: awsui.$space-xxs;
-  }
-
-  // Indent actions according to the size of the alert icon
-  &.icon-size-medium > .action {
-    margin-inline-start: calc(#{awsui.$size-icon-medium} + #{awsui.$space-xs});
-  }
-  &.icon-size-big > .action {
-    margin-inline-start: calc(#{awsui.$size-icon-big} + #{awsui.$space-xs});
-  }
-  &.icon-size-normal > .action {
-    margin-inline-start: calc(#{awsui.$size-icon-normal} + #{awsui.$space-xs});
   }
 }
 
